# Cloud-Shadow-Detection

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  conaninfo.txt  pyproject.toml
executables/Cloud-Shadow-Detection/: CMakeLists.txt  main-Cloud-Shadow-Detection.cpp
executables/Height-Variation/: CMakeLists.txt  main-Height-Variation.cpp
source/: CloudMask.cpp  CloudMask.h  CloudShadowMatching.cpp  CloudShadowMatching.h  ComputeEnvironment.cpp  ComputeEnvironment.h  Functions.cpp  Functions.h  GUI.cpp  GUI.h  GaussianBlur.cpp  GaussianBlur.h  ImageOperations.cpp  ImageOperations.h  Imageio.cpp  Imageio.h  PitFillAlgorithm.cpp  PitFillAlgorithm.h  PotentialShadowMask.cpp  PotentialShadowMask.h  ProbabilityRefinement.cpp  ProbabilityRefinement.h  SceneClassificationLayer.cpp  SceneClassificationLayer.h  ShadowMaskEvaluation.cpp  ShadowMaskEvaluation.h  VectorGridOperations.cpp  VectorGridOperations.h  types.cpp  types.h
source/boilerplate/: Camera.cpp  Camera.h  GLBuffers.cpp  GLBuffers.h  GLDebug.cpp  GLDebug.h  GLHandles.cpp  GLHandles.h  Geometry.cpp  Geometry.h  Log.h  ScreenQuad.cpp  ScreenQuad.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
source/shaders/: Basic.frag  Basic.vert  Float4ImageViewer.frag  FloatImageViewer.frag  FloatImageViewer.vert  ProbabilitySurfaceRender.frag  ProbabilitySurfaceRender.geom  ProbabilitySurfaceRender.vert  VectorGridViewer.frag  VectorGridViewer.geom  VectorGridViewer.vert
toml-templates/: data.toml  full_output.toml
