[tool.poetry]
name = "cloud-shadow-detection"
version = "0.1.0"
description = ""
authors = ["JeffreyLayton <Jeffrey.layton@ucalgary.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
conan = "^1.52.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
